app/frontend/styles/startpage.scss
.img_container {
  display: flex;
  width: 100%;
  min-height: 730px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 0.5em;
  &.grownups-img {
    background-image: url('/images/erwachsene.jpg');
  }
  &.alphabet-img {
    background-image: url('/images/alphabet.jpg');
  }
  &.children-img {
    background-image: url('/images/kinder.jpg');
  }
  @media (min-width: 576px) {
    min-height: 667px;
  }
}

.lead {
  height: fit-content;
  padding: 15px;
  color: black;
  background-color: #f0f8ffdd;
  font-size: 1.2em;
}

.video-container {
  max-width: 600px;
  margin: auto;
}

.dsgvo-hint {
  cursor: pointer;
}

.student-login-footer {
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translate(-50%, 0);
}

